objects/TI_Category_List__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product_Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <label>Product_Feature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TI_Category__c</fullName>
        <label>TI Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TI Category List</label>
</CustomObject>